fixing spacing of projects page for mobile

--- a/web/ui/static/css/projects.css
+++ b/web/ui/static/css/projects.css
@@ -3,14 +3,14 @@
 }
 
 .projects hr {
-    width: 90%;
+    width: 95%;
 }
 
 .project-listing {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 90%;
+    width: 100%;
     margin: auto;
 }
 
@@ -27,10 +27,10 @@
 }
 
 .project-description-container {
-    width: 60%;
+    width: 70%;
     color: grey;
     font-family: "Times New Roman", sans-serif;
-    font-size: calc(10px + 0.6vw);
+    font-size: calc(8px + 0.6vw);
 }
 
 .project-description-container p {
@@ -42,11 +42,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;
+    width: 10%;
 }
 
 .project-report-showcase a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     text-decoration: none;
     color: #3661bf;
-    font-size: calc(14px + 0.8vw);
+    font-size: calc(10px + 0.5vw);
 }
